# giraffe

./: CMakeLists.txt  README.md  benchmarks.txt
include/: Component.h  ComponentsPool.h  Config.h  FilterIterator.h  Giraffe.h  Predicates.h  Storage.h  System.h
src/: CMakeLists.txt  Component.cpp  ComponentsPool.cpp  FilterIterator.cpp  Giraffe.cpp  Predicates.cpp  Storage.cpp  System.cpp
tests/: CMakeLists.txt  test1.cpp  test10.cpp  test11.cpp  test12.cpp  test13.cpp  test14.cpp  test15.cpp  test16.cpp  test17.cpp  test18.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp  test9.cpp  test_benchmarks.cpp
